--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,7 @@
     <string name="content_desc">一个满足你所有跑步需求的APP</string>
     <string name="btn_register">注册</string>
     <string name="btn_login">登陆</string>
+    <string name="tv_actionbar_register">注册</string>
+    <string name="register_phone_hint_et">请输入您的中国大陆手机号</string>
+    <string name="register_verification_hint_et">请输入验证码</string>
 </resources>
