继续完善登陆注册ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="register_verification_hint_et">请输入验证码</string>
     <string name="register_btn_submit">下一步</string>
     <string name="get_verification_code_tv">获取验证码</string>
+    <string name="tool_bar_login">登陆</string>
 </resources>
