--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,10 @@
     <string name="register_btn_submit">下一步</string>
     <string name="get_verification_code_tv">获取验证码</string>
     <string name="tool_bar_login">登陆</string>
+    <string name="new_login_tv">登陆</string>
+    <string name="new_login_psd_et">请填写密码</string>
+    <string name="new_login_account_et">请输入邮箱或手机号</string>
+    <string name="forget_pwd_tv">登陆遇到问题？</string>
+    <string name="quick_login_tv">手机号快捷登陆</string>
+    <string name="goto_register_tv">立即注册</string>
 </resources>
