--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,8 @@
     <string name="tv_actionbar_quick_login">快捷登录</string>
     <string name="register_phone_hint_et">请输入您的中国大陆手机号</string>
     <string name="register_verification_hint_et">请输入验证码</string>
-    <string name="register_btn_submit">下一步</string>
+    <string name="register_btn_submit">注册</string>
+    <string name="forget_pwd_btn_submit">重置</string>
     <string name="quick_login_btn_submit">登录</string>
     <string name="get_verification_code_tv">获取验证码</string>
     <string name="tool_bar_login">登陆</string>
@@ -67,6 +68,9 @@
     <string name="new_reset_pwd_new_again">请确认新密码</string>
     <string name="new_reset_pwd_new">请输入新密码</string>
     <string name="new_login_account_et">请输入手机号</string>
+    <string name="new_login_account">请输入账号</string>
+    <string name="new_register_pwd">请输入密码</string>
+    <string name="new_register_pwd_again">请确认密码</string>
     <string name="forget_pwd_tv">登陆遇到问题？</string>
     <string name="quick_login_tv">手机号快捷登陆</string>
     <string name="goto_register_tv">立即注册</string>
