--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,7 @@
     <string name="forget_pwd_tv">登陆遇到问题？</string>
     <string name="quick_login_tv">手机号快捷登陆</string>
     <string name="goto_register_tv">立即注册</string>
+    <string name="user_info_run_count">累计跑步次数</string>
+    <string name="user_info_run_distance">累计跑步里程</string>
+    <string name="edit_info">编辑资料</string>
 </resources>
