--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,12 @@
     <string name="user_info_run_distance">累计跑步里程</string>
     <string name="edit_info">编辑资料</string>
     <string name="gps">GPS</string>
+
+
+    <!--GPS 提示-->
     <string name="gps_def_prompt">GPS未开启，无法记录轨迹</string>
+    <string name="gps_search_small">信号弱，记录可能不准确</string>
+    <string name="gps_search_middle"></string>
+    <string name="gps_search_strong"></string>
+
 </resources>
