--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,6 +110,12 @@
     <string name="his_distance_text">公里</string>
     <string name="his_def_prompt">还没完成今天的任务哦：）继续加油</string>
     <string name="change_user_info">修改资料</string>
+    <string name="change_user_nickname">用户名</string>
+    <string name="change_user_sex">性别</string>
+    <string name="change_user_height">身高</string>
+    <string name="change_user_weight">体重</string>
+    <string name="chang_user_defstr">点击设置</string>
+    <string name="change_user_save">保存修改</string>
 
 
 </resources>
